[package]
name = "csr-gen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
derive_more = { version= "2", features=["from", "display"]  }
clap = { version="4.5.41", features=["derive"] }

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"